fixup! JBR-3157 Maximized window with custom decorations isn't focused on showing