@@ -27,6 +27,7 @@ import java.util.concurrent.TimeUnit;
  * @test
  * @summary Regression test for JBR-3157 Maximized window with custom decorations isn't focused on showing
  * @key headful
+ * @run main/othervm --add-opens java.desktop/java.awt=ALL-UNNAMED MaximizedCustomDecorationsTest
  */
 
 public class MaximizedCustomDecorationsTest {
